[project]
name = "gplearn"
dynamic = ["version"]
authors = [
  { name="Trevor Stephens", email="trev.stephens@gmail.com" },
]
description = "Genetic Programming in Python, with a scikit-learn inspired API"
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.8.0",
    "joblib>=1.3.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

[project.urls]
homepage = "https://gplearn.readthedocs.io/en/stable/"
source = "https://github.com/trevorstephens/gplearn"
tracker = "https://github.com/trevorstephens/gplearn/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "gplearn/__init__.py"
